# Multi-View-Registration

./: CMakeLists.txt  README.md  instructions of turntable.txt
cmake/: Find3rdParty.cmake
mvr/: CMakeLists.txt
mvr/include/: adapter_widget.h  file_system_model.h  file_viewer_widget.h  light_source.h  main_window.h  math_solvers.h  osg_utility.h  osg_viewer_widget.h  parameter.h  parameter_dialog.h  parameter_manager.h  point_cloud.h  registrator.h  renderable.h  threaded_painter.h  toggle_handler.h  types.h  update_callback.h  update_visitor.h
mvr/include/impl/: parameter.hpp
mvr/resource/: main_window.ui
mvr/src/: adapter_widget.cpp  file_system_model.cpp  file_viewer_widget.cpp  light_source.cpp  main.cpp  main_window.cpp  math_solvers.cpp  osg_utility.cpp  osg_viewer_widget.cpp  parameter.cpp  parameter_dialog.cpp  parameter_manager.cpp  point_cloud.cpp  registrator.cpp  renderable.cpp  threaded_painter.cpp  toggle_handler.cpp  update_callback.cpp  update_visitor.cpp
